syntax = "proto3";
package v1;

// Item Persistence Service
service ItemPersistenceService {
    rpc create (CreateItemRequest) returns (CreateItemResponse);
    rpc list (ListItemRequest) returns (ListItemResponse);
    rpc get (GetItemRequest) returns (GetItemResponse);
    rpc update (UpdateItemRequest) returns (UpdateItemResponse);
    rpc delete (DeleteItemRequest) returns (DeleteItemResponse);
}

message GrpcItem {
    int64 id = 1;
    string description = 2;
    int32 stock = 3;
}

message CreateItemRequest {
    GrpcItem item = 1;
}

message CreateItemResponse {
    GrpcItem item = 1;
}

message ListItemRequest {
}

message ListItemResponse {
    repeated GrpcItem item = 1;
}

message GetItemRequest {
    int64 id = 1;
}

message GetItemResponse {
    GrpcItem item = 1;
}

message UpdateItemRequest {
    int64 id = 1;
    GrpcItem item = 2;
}

message UpdateItemResponse {
    GrpcItem item = 1;
}

message DeleteItemRequest {
    int64 id = 1;
}

message DeleteItemResponse {
    GrpcItem item = 1;
}